Add user/password database, using Berkeley DB.
Username / secret key pairs are now stored in a database,
called "TDB" internally.

Input and output TDB data using new utility "tdbadm".

Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,11 @@ dnl -----------------------------
 AC_CHECK_LIB(pcre, pcre_compile, PCRE_LIBS=-lpcre)
 AC_CHECK_LIB(crypto, MD5_Init, CRYPTO_LIBS=-lcrypto)
 AC_CHECK_LIB(sqlite3, sqlite3_open, SQLITE_LIBS=-lsqlite3)
+AC_CHECK_LIB(db-4.7, db_create, DB4_LIBS=-ldb-4.7,
+	AC_CHECK_LIB(db-4.6, db_create, DB4_LIBS=-ldb-4.6,
+	AC_CHECK_LIB(db-4.5, db_create, DB4_LIBS=-ldb-4.5,
+	AC_CHECK_LIB(db-4.4, db_create, DB4_LIBS=-ldb-4.4,
+	AC_CHECK_LIB(db-4.3, db_create, DB4_LIBS=-ldb-4.3, exit 1)))))
 
 dnl -------------------------------------
 dnl Checks for optional library functions
@@ -65,6 +70,7 @@ LIBCURL_CHECK_CONFIG(, 7.10.1, , exit 1)
 AC_SUBST(PCRE_LIBS)
 AC_SUBST(CRYPTO_LIBS)
 AC_SUBST(SQLITE_LIBS)
+AC_SUBST(DB4_LIBS)
 
 AC_CONFIG_FILES([doc/Makefile
 		 lib/Makefile
