--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,9 +2,11 @@
 INCLUDES		= -I$(top_srcdir)/include	\
 			  @LIBCURL_CPPFLAGS@ @GLIB_CFLAGS@ @XML_CPPFLAGS@
 
-noinst_LIBRARIES	= libs3c.a libhttputil.a
+noinst_LIBRARIES	= libs3c.a libhttputil.a libtdb.a
 
 libs3c_a_SOURCES	= s3c.c
 
 libhttputil_a_SOURCES	= httputil.c uri.c
+
+libtdb_a_SOURCES	= tdb.c
 
