--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,10 +1,14 @@
 
 INCLUDES	= -I$(top_srcdir)/include @GLIB_CFLAGS@
 
-sbin_PROGRAMS	= tabled
+sbin_PROGRAMS	= tabled tdbadm
 
 tabled_SOURCES	= tabled.h		\
 		  bucket.c object.c server.c util.c
-tabled_LDADD	= ../lib/libhttputil.a	\
-		  @PCRE_LIBS@ @GLIB_LIBS@ @CRYPTO_LIBS@ @SQLITE_LIBS@
+tabled_LDADD	= ../lib/libhttputil.a ../lib/libtdb.a		\
+		  @PCRE_LIBS@ @GLIB_LIBS@ @CRYPTO_LIBS@ @SQLITE_LIBS@ \
+		  @DB4_LIBS@
+
+tdbadm_SOURCES	= tdbadm.c
+tdbadm_LDADD	= ../lib/libtdb.a @GLIB_LIBS@ @DB4_LIBS@
 
