[server] Finished sqlite->db4 backend conversion
Each set of metadata transactions is now inside a db4 transaction.

Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -6,8 +6,7 @@ sbin_PROGRAMS	= tabled tdbadm
 tabled_SOURCES	= tabled.h		\
 		  bucket.c object.c server.c util.c
 tabled_LDADD	= ../lib/libhttputil.a ../lib/libtdb.a		\
-		  @PCRE_LIBS@ @GLIB_LIBS@ @CRYPTO_LIBS@ @SQLITE_LIBS@ \
-		  @DB4_LIBS@
+		  @PCRE_LIBS@ @GLIB_LIBS@ @CRYPTO_LIBS@ @DB4_LIBS@
 
 tdbadm_SOURCES	= tdbadm.c
 tdbadm_LDADD	= ../lib/libtdb.a @GLIB_LIBS@ @DB4_LIBS@
