--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,8 @@ AC_CHECK_LIB(db-4.7, db_create, DB4_LIBS=-ldb-4.7,
 	AC_CHECK_LIB(db-4.5, db_create, DB4_LIBS=-ldb-4.5,
 	AC_CHECK_LIB(db-4.4, db_create, DB4_LIBS=-ldb-4.4,
 	AC_CHECK_LIB(db-4.3, db_create, DB4_LIBS=-ldb-4.3, exit 1)))))
+AC_CHECK_LIB(event, event_base_new, EVENT_LIBS=-levent, exit 1)
+AC_CHECK_LIB(argp, argp_parse, ARGP_LIBS=-largp)
 
 dnl -------------------------------------
 dnl Checks for optional library functions
@@ -69,6 +71,8 @@ LIBCURL_CHECK_CONFIG(, 7.10.1, , exit 1)
 AC_SUBST(PCRE_LIBS)
 AC_SUBST(CRYPTO_LIBS)
 AC_SUBST(DB4_LIBS)
+AC_SUBST(EVENT_LIBS)
+AC_SUBST(ARGP_LIBS)
 
 AC_CONFIG_FILES([doc/Makefile
 		 lib/Makefile
