--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -9,19 +9,19 @@ libhttputil_a_SOURCES	= httputil.c uri.c
 libtdb_a_SOURCES	= tdb.c
 
 EXTRA_DIST =
-	libs3c.pc.in libs3c-uninstalled.pc.in
+	libhttpstor.pc.in libhttpstor-uninstalled.pc.in
 
 LINK = $(LIBTOOL) --mode=link $(CC) $(CFLAGS) $(LDFLAGS) -o $@
 
-lib_LTLIBRARIES		= libs3c.la
+lib_LTLIBRARIES		= libhttpstor.la
 
-libs3c_la_SOURCES	= s3c.c
+libhttpstor_la_SOURCES	= httpstor.c
 
-libs3c_la_LDFLAGS = \
-	-version-info $(LIBS3C_CURRENT):$(LIBS3C_REVISION):$(LIBS3C_AGE) \
+libhttpstor_la_LDFLAGS = \
+	-version-info $(LIBHTTPSTOR_CURRENT):$(LIBHTTPSTOR_REVISION):$(LIBHTTPSTOR_AGE) \
 	-no-undefined \
 	-export-symbols-regex "^[^_].*"
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libs3c.pc
+pkgconfig_DATA = libhttpstor.pc
 
