--- a/lib/libhttpstor-uninstalled.pc.in
+++ b/lib/libhttpstor-uninstalled.pc.in
@@ -2,11 +2,11 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
-libs3c_serverdir=@libexecdir@
+libhttpstor_serverdir=@libexecdir@
 
-Name: libs3c
-Description: libs3c
+Name: libhttpstor
+Description: libhttpstor
 Requires: glib-2.0
 Version: @VERSION@
-Libs: ${pc_top_builddir}/${pcfiledir}/libs3c.la
+Libs: ${pc_top_builddir}/${pcfiledir}/libhttpstor.la
 #Cflags: -I${pc_top_builddir}/${pcfiledir}/..
