--- a/lib/libhttpstor.pc.in
+++ b/lib/libhttpstor.pc.in
@@ -2,12 +2,12 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
-libs3c_serverdir=@libexecdir@
+libhttpstor_serverdir=@libexecdir@
 localstatedir=@localstatedir@
 
-Name: libs3c
-Description: libs3c
+Name: libhttpstor
+Description: libhttpstor
 Requires: glib-2.0
 Version: @VERSION@
-Libs: -L${libdir} -ls3c
-#Cflags: -I${includedir}/libs3c-2.0
+Libs: -L${libdir} -lhttpstor
+#Cflags: -I${includedir}/libhttpstor-2.0
