--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -6,5 +6,17 @@
   <Port>80</Port>
 </Listen>
 
-<Data>/path/tabled/lib</Data>
 <TDB>/path/tabled/lib/tdb</TDB>
+
+<!-- Temporary, undocumented: chunk nodes unknown to CLD -->
+<StorageNode>
+  <Port>8082</Port>
+  <Host>b12.phx2.my.com</Host>
+</StorageNode>
+<StorageNode>
+  <Port>8082</Port>
+  <Host>b13.phx2.my.com</Host>
+</StorageNode>
+
+<ChunkUser>test</ChunkUser>
+<ChunkKey>test</ChunkKey>
