--- a/test/tabled-test.conf
+++ b/test/tabled-test.conf
@@ -1,6 +1,13 @@
 
 <PID>tabled.pid</PID>
 <Listen><Port>18080</Port></Listen>
-<Data>data</Data>
 <TDB>data/tdb</TDB>
+
+<StorageNode>
+  <Port>18082</Port>
+  <Host>localhost</Host>
+</StorageNode>
+
+<ChunkUser>testuser</ChunkUser>
+<ChunkKey>testuser</ChunkKey>
 
