--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -4,9 +4,9 @@ INCLUDES	= -I$(top_srcdir)/include @GLIB_CFLAGS@
 sbin_PROGRAMS	= tabled tdbadm
 
 tabled_SOURCES	= tabled.h		\
-		  bucket.c object.c server.c storage.c config.c util.c
+		  bucket.c object.c server.c storage.c cldu.c config.c util.c
 tabled_LDADD	= ../lib/libhttputil.a ../lib/libtdb.a		\
-		  @CHUNKDC_LIBS@ @PCRE_LIBS@ @GLIB_LIBS@ \
+		  @CHUNKDC_LIBS@ @CLDC_LIBS@ @PCRE_LIBS@ @GLIB_LIBS@ \
 		  @CRYPTO_LIBS@ @DB4_LIBS@ @EVENT_LIBS@ @ARGP_LIBS@ @SSL_LIBS@
 
 tdbadm_SOURCES	= tdbadm.c
