--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -7,8 +7,15 @@
 </Listen>
 
 <TDB>/path/tabled/lib/tdb</TDB>
+<TDBRepPort>8083</TDBRepPort>
 
-<!-- Temporary, undocumented: chunk nodes unknown to CLD -->
+<!--
+  The clauses <StorageNode> and <CLD> are not to be used in production
+  configurations. Tabled finds CLD from SRV records in DNS, and then finds
+  storage nodes from CLD. We only use these clauses in order to bootstrap
+  a build of tabled. Consider them undocumented and a subject to change
+  or removal at any time.
+  -->
 <StorageNode>
   <Port>8082</Port>
   <Host>b12.phx2.my.com</Host>
@@ -17,6 +24,10 @@
   <Port>8082</Port>
   <Host>b13.phx2.my.com</Host>
 </StorageNode>
+<CLD>
+  <Port>8081</Port>
+  <Host>localhost</Host>
+</CLD>
 
 <ChunkUser>test</ChunkUser>
 <ChunkKey>test</ChunkKey>
