--- a/test/tabled-test.conf
+++ b/test/tabled-test.conf
@@ -2,11 +2,16 @@
 <PID>tabled.pid</PID>
 <Listen><Port>18080</Port></Listen>
 <TDB>data/tdb</TDB>
+<TDBRepPort>18083</TDBRepPort>
 
 <StorageNode>
   <Port>18082</Port>
   <Host>localhost</Host>
 </StorageNode>
+<CLD>
+  <Port>18081</Port>
+  <Host>localhost</Host>
+</CLD>
 
 <ChunkUser>testuser</ChunkUser>
 <ChunkKey>testuser</ChunkKey>
