Fix: Tests failed because of missing configs.
Update for changes in chunkd.

Signed-off-by: Fabian Deutsch <fabian.deutsch@gmx.de>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/test/chunkd-test.conf
+++ b/test/chunkd-test.conf
@@ -4,7 +4,13 @@
     82  -- too low for non-root
   8082  -- installed chunkd may use it
  -->
-<Listen><Port>18082</Port></Listen>
+<Listen>
+  <Port>18082</Port>
+</Listen>
 <PID>chunkd.pid</PID>
 <Path>data/chunk</Path>
-
+<NID>1</NID>
+<CLD>
+  <Port>18081</Port>
+  <Host>localhost</Host>
+</CLD>
