tabled, test: add option to force hostname; use in test to force localhost
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -2,6 +2,11 @@
   <PID>/var/run/tabled.pid</PID>
  -->
 
+<!-- It is rarely necessary to _force_ the local hostname to a value,
+     because auto-detection usually works.
+  <ForceHost>my_local_node_name.example.com</ForceHost>
+ -->
+
 <Listen>
   <Port>80</Port>
 </Listen>
