--- a/test/tabled-test.conf
+++ b/test/tabled-test.conf
@@ -1,5 +1,6 @@
 
 <PID>tabled.pid</PID>
+<ForceHost>localhost.localdomain</ForceHost>
 <Listen><Port>18080</Port></Listen>
 <TDB>data/tdb</TDB>
 <TDBRepPort>18083</TDBRepPort>
