--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,5 +1,5 @@
 
-INCLUDES	= -I$(top_srcdir)/include @GLIB_CFLAGS@
+INCLUDES	= -I$(top_srcdir)/include @GLIB_CFLAGS@ @CHUNKDC_CFLAGS@ @CLDC_CFLAGS@
 
 sbin_PROGRAMS	= tabled tdbadm
 
