--- a/test/chunkd-test.conf
+++ b/test/chunkd-test.conf
@@ -9,11 +9,7 @@
 </Listen>
 <PID>chunkd.pid</PID>
 <Path>data/chunk</Path>
-<!--
- Excluding NID prevents Chunk from registering with CLD and thus conflicting
- with itself as described by <StorageNode> in tabled.conf.
- -->
-<!-- <NID>1</NID> -->
+<NID>1</NID>
 <CLD>
   <Port>18081</Port>
   <Host>localhost</Host>
