--- a/test/chunkd-test.conf
+++ b/test/chunkd-test.conf
@@ -1,16 +1,11 @@
 
-<!--
- Ports not to use:
-    82  -- too low for non-root
-  8082  -- installed chunkd may use it
- -->
 <Listen>
-  <Port>18082</Port>
+  <PortFile>/dev/null</PortFile>
 </Listen>
 <PID>chunkd.pid</PID>
 <Path>data/chunk</Path>
 <NID>1</NID>
 <CLD>
-  <Port>18081</Port>
+  <PortFile>cld.port</PortFile>
   <Host>localhost</Host>
 </CLD>
