--- a/test/tabled-test.conf
+++ b/test/tabled-test.conf
@@ -1,12 +1,12 @@
 
 <PID>tabled.pid</PID>
 <ForceHost>localhost.localdomain</ForceHost>
-<Listen><Port>18080</Port></Listen>
+<Listen><PortFile>tabled.acc</PortFile></Listen>
 <TDB>data/tdb</TDB>
 <TDBRepPort>18083</TDBRepPort>
 
 <CLD>
-  <Port>18081</Port>
+  <PortFile>cld.port</PortFile>
   <Host>localhost</Host>
 </CLD>
 
