tabled: use "auto" keyword
The current implementation of automatic listening ports was configured
implicitly by adding <PortFile> clause. This turned out to be a silly
idea. A special keyword for <Port> is more convenient.

This should be built after both CLD and Chunk implement "auto" keyword.

Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/test/tabled-test.conf
+++ b/test/tabled-test.conf
@@ -1,7 +1,10 @@
 
 <PID>tabled.pid</PID>
 <ForceHost>localhost.localdomain</ForceHost>
-<Listen><PortFile>tabled.acc</PortFile></Listen>
+<Listen>
+  <Port>auto</Port>
+  <PortFile>tabled.acc</PortFile>
+</Listen>
 <TDB>data/tdb</TDB>
 <TDBRepPort>18083</TDBRepPort>
 
