tabled: tweak chunk-test.conf
- Add the fresh option ForceHost, for the sake of Fedora builds.
- Change the NID just to make it more interesting (this helps to
  make sure we're not using 1 by accident).

Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/test/chunkd-test.conf
+++ b/test/chunkd-test.conf
@@ -1,10 +1,11 @@
 
+<ForceHost>localhost.localdomain</ForceHost>
 <Listen>
   <Port>auto</Port>
 </Listen>
 <PID>chunkd.pid</PID>
 <Path>data/chunk</Path>
-<NID>1</NID>
+<NID>19690720</NID>
 <CLD>
   <PortFile>cld.port</PortFile>
   <Host>localhost</Host>
