Prefer AC_SEARCH_LIBS for linking with functions that might be in libc.
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -8,7 +8,7 @@ tabled_SOURCES	= tabled.h		\
 		  cldu.c config.c util.c
 tabled_LDADD	= ../lib/libhttputil.a ../lib/libtdb.a		\
 		  @CHUNKDC_LIBS@ @CLDC_LIBS@ @PCRE_LIBS@ @GLIB_LIBS@ \
-		  @CRYPTO_LIBS@ @DB4_LIBS@ @EVENT_LIBS@ @ARGP_LIBS@ @SSL_LIBS@
+		  @CRYPTO_LIBS@ @DB4_LIBS@ @EVENT_LIBS@ @SSL_LIBS@
 
 tdbadm_SOURCES	= tdbadm.c
 tdbadm_LDADD	= ../lib/libtdb.a @GLIB_LIBS@ @DB4_LIBS@ @ARGP_LIBS@
