tabled: drop StorageNode clause
We rely on CLD for builds (on all platforms), so we do not need the
StorageNode clause anymore.

Signed-Off-By: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -15,20 +15,12 @@
 <TDBRepPort>8083</TDBRepPort>
 
 <!--
-  The clauses <StorageNode> and <CLD> are not to be used in production
-  configurations. Tabled finds CLD from SRV records in DNS, and then finds
-  storage nodes from CLD. We only use these clauses in order to bootstrap
+  The clause <CLD> is not to be used in production configurations.
+  Normally, tabled finds CLD from SRV records in DNS, and then finds
+  storage nodes from CLD. We only use such clauses in order to bootstrap
   a build of tabled. Consider them undocumented and a subject to change
   or removal at any time.
   -->
-<StorageNode>
-  <Port>8082</Port>
-  <Host>b12.phx2.my.com</Host>
-</StorageNode>
-<StorageNode>
-  <Port>8082</Port>
-  <Host>b13.phx2.my.com</Host>
-</StorageNode>
 <CLD>
   <Port>8081</Port>
   <Host>localhost</Host>
