tabled: cleanup tabled.conf
The lib/ is a vestige of days when we stored files in a local filesystem,
not Chunk. Just kill it.

And as for CLD, it's a last resort configuration, not something we should
encourage. So comment it out.

Signed-Off-By: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -11,7 +11,7 @@
   <Port>80</Port>
 </Listen>
 
-<TDB>/path/tabled/lib/tdb</TDB>
+<TDB>/path/tabled/tdb</TDB>
 <TDBRepPort>8083</TDBRepPort>
 
 <!--
@@ -21,10 +21,12 @@
   a build of tabled. Consider them undocumented and a subject to change
   or removal at any time.
   -->
-<CLD>
+<!--
+ <CLD>
   <Port>8081</Port>
   <Host>localhost</Host>
-</CLD>
+ </CLD>
+-->
 
 <ChunkUser>test</ChunkUser>
 <ChunkKey>test</ChunkKey>
