tabled: add <Cell> element
Make the cell configurable. Among other things we need this for is
that you cannot migrate a tabled over when DB format changes, short
of running 2 CLDs.

We also add a few thoughts to the documentation, prompted by re-reading
of the document while adding the clause for <Cell>.

Signed-Off-By: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -11,6 +11,13 @@
   <Port>80</Port>
 </Listen>
 
+<!--
+  One cell per DB, don't skimp on cells. Also, make sure the replication
+  ports do not conflict when you make hosts to host several cells.
+  Unfortunately, the diagnostics are not very good if they do.
+  Most likely you'll see database corruption in such cases.
+  -->
+<Cell>ultracart2</Cell>
 <TDB>/path/tabled/tdb</TDB>
 <TDBRepPort>8083</TDBRepPort>
 
