tabled: add the status display
I find it too tiresome to monitor the status with kill -USR1.
This is more fun. The patch seems not too ugly regarding the factoring
of the cli_xxx methods.

Signed-Off-By: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -37,3 +37,6 @@
 
 <ChunkUser>test</ChunkUser>
 <ChunkKey>test</ChunkKey>
+
+<!-- Monitoring interface. Best is not to expose this to Internet. -->
+<StatusPort>8084</StatusPort>
