Tabled: rename cells to groups
The term "cell" in context of tabled and chunkd conflicts with the idea
of a CLD cell. So, rename it to "group".

Notice that we aren't introducing configuring of actual CLD paths yet.
Coding that in the old CLD API is too hard, so it will come after ncld.
Stay tuned.

Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -12,12 +12,12 @@
 </Listen>
 
 <!--
-  One cell per DB, don't skimp on cells. Also, make sure the replication
-  ports do not conflict when you make hosts to host several cells.
+  One group per DB, don't skimp on groups. Also, make sure the replication
+  ports do not conflict when you make hosts to host several groups.
   Unfortunately, the diagnostics are not very good if they do.
   Most likely you'll see database corruption in such cases.
   -->
-<Cell>ultracart2</Cell>
+<Group>ultracart2</Group>
 <TDB>/path/tabled/tdb</TDB>
 <TDBRepPort>8083</TDBRepPort>
 
