--- a/test/tabled-test.conf
+++ b/test/tabled-test.conf
@@ -16,3 +16,5 @@
 <ChunkUser>testuser</ChunkUser>
 <ChunkKey>testuser</ChunkKey>
 
+<!-- Setting "default" just to make sure tabled configures it correctly. -->
+<Group>default</Group>
