[test] add test for storage/retrieval of x-amz-meta-* HTTP headers
Also,
- move now-common code into a new internal libtest.a library.
- update hdr-content-type.c copyright header to 2010

Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -25,19 +25,24 @@ TESTS =				\
 	basic-object		\
 	large-object		\
 	hdr-content-type	\
+	hdr-meta		\
 	stop-daemon		\
 	clean-db
 
 check_PROGRAMS		= basic-bucket basic-object it-works large-object \
-			  hdr-content-type wait-for-listen
+			  hdr-content-type hdr-meta wait-for-listen
+
+noinst_LIBRARIES	= libtest.a
 
 TESTLDADD		= ../lib/libhttpstor.la	\
 			  ../lib/libhttputil.a	\
+			  libtest.a \
 			  @LIBCURL@ @GLIB_LIBS@ @CRYPTO_LIBS@ @XML_LIBS@
 basic_bucket_LDADD	= $(TESTLDADD)
 basic_object_LDADD	= $(TESTLDADD)
 large_object_LDADD	= $(TESTLDADD)
 hdr_content_type_LDADD	= $(TESTLDADD)
+hdr_meta_LDADD		= $(TESTLDADD)
 it_works_LDADD		= $(TESTLDADD)
 
 wait_for_listen_LDADD	= ../lib/libhttputil.a
