test/chunkd-test.conf: add required InfoPath clause
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/test/chunkd-test.conf
+++ b/test/chunkd-test.conf
@@ -5,6 +5,7 @@
 </Listen>
 <PID>chunkd.pid</PID>
 <Path>data/chunk</Path>
+<InfoPath>/chunk-default/19690720</InfoPath>
 <NID>19690720</NID>
 <CLD>
   <PortFile>cld.port</PortFile>
