Update for upstream combination of cld+chunkd into new 'hail' combined pkg.
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,5 +1,5 @@
 
-INCLUDES	= -I$(top_srcdir)/include @GLIB_CFLAGS@ @CHUNKDC_CFLAGS@ @CLDC_CFLAGS@
+INCLUDES	= -I$(top_srcdir)/include @GLIB_CFLAGS@ @HAIL_CFLAGS@
 
 sbin_PROGRAMS	= tabled tdbadm
 
@@ -7,7 +7,7 @@ tabled_SOURCES	= tabled.h		\
 		  bucket.c cldu.c config.c object.c replica.c \
 		  server.c status.c storage.c storparse.c util.c
 tabled_LDADD	= ../lib/libhttputil.a ../lib/libtdb.a		\
-		  @CHUNKDC_LIBS@ @CLDC_LIBS@ @PCRE_LIBS@ @GLIB_LIBS@ \
+		  @HAIL_LIBS@ @PCRE_LIBS@ @GLIB_LIBS@ \
 		  @CRYPTO_LIBS@ @DB4_LIBS@ @EVENT_LIBS@ @SSL_LIBS@
 
 tdbadm_SOURCES	= tdbadm.c
