--- a/configure.ac
+++ b/configure.ac
@@ -89,8 +89,7 @@ AC_CHECK_LIB(event, event_base_new, EVENT_LIBS=-levent,
   [AC_MSG_ERROR([Missing required libevent])])
 AC_SEARCH_LIBS(argp_parse, argp)
 AC_SEARCH_LIBS(bind, socket)
-PKG_CHECK_MODULES(CHUNKDC, libchunkdc)
-PKG_CHECK_MODULES(CLDC, libcldc)
+PKG_CHECK_MODULES(HAIL, libhail)
 
 dnl -------------------------------------
 dnl Checks for optional library functions
