--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_INIT([tabled], [0.5.1git],
+AC_INIT([tabled], [0.5.1],
         [http://hail.wiki.kernel.org/])
 
 AC_PREREQ(2.52)
