Support "auto" replicaton port
Allow random ports for replication master to listen on.

The patch is somewhat larger than expected, because before we had
the MASTER file written right after locking. Now we may have it
written without listening parameters, and the slaves must be
ready to deal with it.

Unlike the auto client port, we do not need to write any "accessor"
files, because we already report the host and port through CLD.

Listening on random ports has security implications.

Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -12,14 +12,22 @@
 </Listen>
 
 <!--
-  One group per DB, don't skimp on groups. Also, make sure the replication
-  ports do not conflict when you make boxes to host several groups or use
-  replication instances iwth TDBRepName.
+  One group per DB, don't skimp on groups.
   -->
 <Group>ultracart2</Group>
+
 <TDB>/path/tabled-uc2/</TDB>        <!-- mkdir -p /path/tabled-uc2 -->
-<!-- <TDBRepName>12345.my_local_node_name.example.com</TDBRepName> -->
+
+<!--
+  The usual practice is to set a fixed TDBRepPort (8083) because this
+  permits to configure a firewall easily. Remember that replication
+  has no authentication and authorization whatsoever for now!
+  When running two test instances on the same host, you may use "auto".
+  But if so, do not forget to set replication instances with TDBRepName.
+  By default, a hostname serves fine as an instance name, port is "auto".
+  -->
 <TDBRepPort>8083</TDBRepPort>
+<!-- <TDBRepName>inst-b.my_local_node_name.example.com</TDBRepName> -->
 
 <!--
   The clause <CLD> is not to be used in production configurations.
