--- a/test/tabled-test.conf
+++ b/test/tabled-test.conf
@@ -6,7 +6,7 @@
   <PortFile>tabled.acc</PortFile>
 </Listen>
 <TDB>data/tdb</TDB>
-<TDBRepPort>18083</TDBRepPort>
+<TDBRepPort>auto</TDBRepPort>
 
 <CLD>
   <PortFile>cld.port</PortFile>
