Add a test for hstor_keys
Our current tests do not invoke hstor_keys at all, and so they did not catch
a crash with double free in append_qparam.

Add a very basic test which at least calls hstor_keys to verify that it
does not crash right away. This test does not excercise complex modes
such as S3 paging, but better this than nothing.

Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -26,11 +26,12 @@ TESTS =				\
 	large-object		\
 	hdr-content-type	\
 	hdr-meta		\
+	list-keys		\
 	stop-daemon		\
 	clean-db
 
 check_PROGRAMS		= basic-bucket basic-object it-works large-object \
-			  hdr-content-type hdr-meta wait-for-listen
+			  hdr-content-type hdr-meta list-keys wait-for-listen
 
 noinst_LIBRARIES	= libtest.a
 
@@ -43,6 +44,7 @@ large_object_LDADD	= $(TESTLDADD)
 hdr_content_type_LDADD	= $(TESTLDADD)
 hdr_meta_LDADD		= $(TESTLDADD)
 it_works_LDADD		= $(TESTLDADD)
+list_keys_LDADD		= $(TESTLDADD)
 
 wait_for_listen_LDADD	= libtest.a
 
