Add filesystem back-end
This patch adds the first new back-end and makes some changes to the way
nodes are added, to make the invariants of storage_node more sensible.

The filesystem back-end itself is not intended for production use,
so it makes no attempt to run any asynchronous transfers.

We also add a test. Note that this differs from the preliminary versions
of this patch. We used to add both chunk and fs back-ends, so that tabled
replicates to both. This makes sense as a test of store path, but on
retrieval tabled selects any one of available storage nodes with the
object, randomly. It creates gaps in test coverage in any given run.
Therefore, we test two back-end types sequentially now.

Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,11 +6,13 @@ EXTRA_DIST =			\
 	test.h			\
 	users.data		\
 	chunkd-test.conf	\
+	be_fs-test.conf		\
 	tabled-test.conf	\
 	prep-db			\
 	start-daemon		\
 	pid-exists		\
 	daemon-running		\
+	combo-redux		\
 	stop-daemon		\
 	clean-db
 
@@ -27,6 +29,7 @@ TESTS =				\
 	hdr-content-type	\
 	hdr-meta		\
 	list-keys		\
+	combo-redux		\
 	stop-daemon		\
 	clean-db
 
